--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,17 +1,3 @@
-<h1>Cards#show</h1>
-<p>Find me in app/views/cards/show.html.erb</p>
-
-
-<%= @order_items.each do |item| %>
-	<h3><%= item.product.title %>&nbsp;&nbsp;<small><%= link_to "remove", item, method: :delete %></small></h3>
-	<h5><%= item.product.price %></h5>
-
-	<%= form_for item do |f| %>
-		<%= f.hidden_field :product_id, :value => item.product.id %>
-		<%= f.number_field :quantity, :value => item.quantity.to_i %>
-		<%= f.submit "Update Card" %>
-	<% end %>
-	<h2>Subtotal: <%= item.total %></h2>
-	<hr><br>
-<% end %>
-<br>
+<div id="sub-price">
+	<%= render "cards/SubPrice" %>
+</div>
