--- a/app/views/order_items/create.js.erb
+++ b/app/views/order_items/create.js.erb
@@ -1,5 +1,6 @@
 // console.log("hello");
 $('#card').html("<%=escape_javascript(render('cards/card')) %>");
 
+// escape_javascript(render('cards/card')) == j render "cards/card" 
 // https://stackoverflow.com/questions/1620113/why-escape-javascript-before-rendering-a-partial
 
