--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,3 +1,8 @@
-<div id="sub-price">
+<h1 style="color:crimson;">My shopping cart</h1>
+<p>Find me in app/views/cards/show.html.erb</p>
+<%= link_to "Back to Home page", root_path %>
+<hr><br>
+<div id="main">
 	<%= render "cards/SubPrice" %>
 </div>
+
