--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -1,43 +1,152 @@
-<h1>Shop#index</h1>
+<br><br><h1>Shop#index</h1>
 <p>Find me in app/views/shop/index.html.erb</p>
 
 <p id="notice"><%= notice %></p>
 
-<h1>Products</h1>
+<h1 style="color: crimson;">Products</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Price</th>
-      <th colspan="4"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.title %></td>
-        <td><%= product.price %></td>
-        <td><%= link_to 'Show', shop_path(product) %></td>
-        
-        <td>
-        	<%= form_for @order_item, remote: true do |f| %>
-	        	<%= f.hidden_field :product_id, :value => product.id %>
-	        	<%= f.number_field :quantity, :value => 1, :min => 1 %>
-	        	<%= f.submit "Add to cart" %>	<!-- Bam Add to cart mot phat la tao order_item moi -->
-        	<% end %>
-        </td>
-
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
 <br>
 
 <div id="card">
 	<%= render 'cards/card' %>
+</div>
+<br>
+<td><%= link_to 'New Product', new_product_path, { class: "btn btn-sm btn-outline-secondary"} %></td>
+
+<br><br>
+<div class="accordion" id="accordionPanelsStayOpenExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+        牛めし
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+      	<div class="accordion-body">
+	      	<table class="table">
+			  <thead>
+			    <tr>
+			      <th>Title</th>
+			      <th>Price</th>
+			      <th colspan="4"></th>
+			    </tr>
+			  </thead>
+
+			  <tbody>
+			    <% @products.each do |product| %>
+			    <tr>
+			      	<% if product.genre == "牛めし" %>
+				        <td><%= product.title %></td>
+				        <td><%= product.price %>￥</td>
+				        <td><%= link_to 'Show', shop_path(product), class: "btn btn-sm btn-outline-secondary" %></td>
+				        <td><% link_to 'Edit', edit_product_path(product) %></td>
+		    			<td><%= link_to 'Destroy', product, method: :delete, class: "btn btn-sm btn-outline-danger" %></td>
+			        	
+				        
+				        <td>
+				        	<%= form_for @order_item, remote: true do |f| %>
+					        	<%= f.hidden_field :product_id, :value => product.id %>
+					        	<%= f.number_field :quantity, :value => 1, :min => 1 %>
+					        	<%= f.submit "Add to cart", class: "btn btn-sm btn-success" %>	<!-- Bam Add to cart mot phat la tao order_item moi -->
+				        	<% end %>
+				        </td>
+				    <% end %>
+				</tr>
+				<% end %>
+			    
+			  </tbody>
+			</table>
+      	</div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+        カレー
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+      <div class="accordion-body">
+        <table class="table">
+			  <thead>
+			    <tr>
+			      <th>Title</th>
+			      <th>Price</th>
+			      <th colspan="4"></th>
+			    </tr>
+			  </thead>
+
+			  <tbody>
+			    <% @products.each do |product| %>
+			    <tr>
+			      	<% if product.genre == "カレー" %>
+				        <td><%= product.title %></td>
+				        <td><%= product.price %>￥</td>
+				        <td><%= link_to 'Show', shop_path(product), class: "btn btn-sm btn-outline-secondary" %></td>
+				        <td><% link_to 'Edit', edit_product_path(product) %></td>
+		    			<td><%= link_to 'Destroy', product, method: :delete, class: "btn btn-sm btn-outline-danger" %></td>
+			        	
+				        
+				        <td>
+				        	<%= form_for @order_item, remote: true do |f| %>
+					        	<%= f.hidden_field :product_id, :value => product.id %>
+					        	<%= f.number_field :quantity, :value => 1, :min => 1 %>
+					        	<%= f.submit "Add to cart", class: "btn btn-sm btn-success" %>	<!-- Bam Add to cart mot phat la tao order_item moi -->
+				        	<% end %>
+				        </td>
+				    <% end %>
+				</tr>
+				<% end %>
+			  </tbody>
+			</table>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+        定食
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+      <div class="accordion-body">
+        <table class="table">
+			  <thead>
+			    <tr>
+			      <th>Title</th>
+			      <th>Price</th>
+			      <th colspan="4"></th>
+			    </tr>
+			  </thead>
+
+			  <tbody>
+			    <% @products.each do |product| %>
+			    <tr>
+			      	<% if product.genre == "定食" %>
+				        <td><%= product.title %></td>
+				        <td><%= product.price %>￥</td>
+				        <<td><%= link_to 'Show', shop_path(product), class: "btn btn-sm btn-outline-secondary" %></td>
+				        <td><% link_to 'Edit', edit_product_path(product) %></td>
+		    			<td><%= link_to 'Destroy', product, method: :delete, class: "btn btn-sm btn-outline-danger" %></td>
+			        	
+				        
+				        <td>
+				        	<%= form_for @order_item, remote: true do |f| %>
+					        	<%= f.hidden_field :product_id, :value => product.id %>
+					        	<%= f.number_field :quantity, :value => 1, :min => 1 %>
+					        	<%= f.submit "Add to cart", class: "btn btn-sm btn-success" %>	<!-- Bam Add to cart mot phat la tao order_item moi -->
+				        	<% end %>
+				        </td>
+				    <% end %>
+				</tr>
+				<% end %>
+			    
+			  </tbody>
+			</table>
+      </div>
+    </div>
+  </div>
 </div>
 
 
