--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -12,7 +12,7 @@
 	<%= render 'cards/card' %>
 </div>
 <br>
-<td><%= link_to 'New Product', new_product_path, { class: "btn btn-sm btn-outline-secondary"} %></td>
+<td><% link_to 'New Product', new_product_path, { class: "btn btn-sm btn-outline-secondary"} %></td>
 
 <br><br>
 <div class="accordion" id="accordionPanelsStayOpenExample">
