--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,20 +1,11 @@
-<br><br><h1>Shop#index</h1>
-<p>Find me in app/views/shop/index.html.erb</p>
+<h1>Admin#index</h1>
+<p>Find me in app/views/admin/index.html.erb</p>
 
-<p id="notice"><%= notice %></p>
+<%= link_to "Sign out", destroy_user_session_path, method: :delete, style: "color:white;", class: "btn btn-sm btn-danger" %><br><br>
+<%= link_to "Home page 👈 ", root_path, {style: "color:white;", class: "btn btn-sm btn-secondary"} %><br><br>
+<%= link_to 'New Product', new_product_path, { class: "btn btn-sm btn-outline-secondary"} %>
+<hr><br>
 
-<h1 style="color: crimson;">Products</h1>
-
-
-<br>
-
-<div id="card">
-	<%= render 'cards/card' %>
-</div>
-<br>
-<td><% link_to 'New Product', new_product_path, { class: "btn btn-sm btn-outline-secondary"} %></td>
-
-<br><br>
 <div class="accordion" id="accordionPanelsStayOpenExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -29,7 +20,7 @@
 			    <tr>
 			      <th>Title</th>
 			      <th>Price</th>
-			      <th colspan="4"></th>
+			      <th colspan="3"></th>
 			    </tr>
 			  </thead>
 
@@ -40,17 +31,9 @@
 				        <td><%= product.title %></td>
 				        <td><%= product.price %>￥</td>
 				        <td><%= link_to 'Show', shop_path(product), class: "btn btn-sm btn-outline-secondary" %></td>
-				        <td><% link_to 'Edit', edit_product_path(product) %></td>
-		    			<td><% link_to 'Destroy', product, method: :delete, class: "btn btn-sm btn-outline-danger" %></td>
-			        	
-				        
-				        <td>
-				        	<%= form_for @order_item, remote: true do |f| %>
-					        	<%= f.hidden_field :product_id, :value => product.id %>
-					        	<%= f.number_field :quantity, :value => 1, :min => 1 %>
-					        	<%= f.submit "Add to cart", class: "btn btn-sm btn-success" %>	<!-- Bam Add to cart mot phat la tao order_item moi -->
-				        	<% end %>
-				        </td>
+				        <td><%= link_to 'Edit', edit_product_path(product), class: "btn btn-sm btn-outline-warning" %></td>
+		    			<td><%= link_to 'Destroy', product, method: :delete, class: "btn btn-sm btn-outline-danger" %></td>
+
 				    <% end %>
 				</tr>
 				<% end %>
@@ -84,17 +67,8 @@
 				        <td><%= product.title %></td>
 				        <td><%= product.price %>￥</td>
 				        <td><%= link_to 'Show', shop_path(product), class: "btn btn-sm btn-outline-secondary" %></td>
-				        <td><% link_to 'Edit', edit_product_path(product) %></td>
-		    			<td><% link_to 'Destroy', product, method: :delete, class: "btn btn-sm btn-outline-danger" %></td>
-			        	
-				        
-				        <td>
-				        	<%= form_for @order_item, remote: true do |f| %>
-					        	<%= f.hidden_field :product_id, :value => product.id %>
-					        	<%= f.number_field :quantity, :value => 1, :min => 1 %>
-					        	<%= f.submit "Add to cart", class: "btn btn-sm btn-success" %>	<!-- Bam Add to cart mot phat la tao order_item moi -->
-				        	<% end %>
-				        </td>
+				        <td><%= link_to 'Edit', edit_product_path(product), class: "btn btn-sm btn-outline-warning" %></td>
+		    			<td><%= link_to 'Destroy', product, method: :delete, class: "btn btn-sm btn-outline-danger" %></td>
 				    <% end %>
 				</tr>
 				<% end %>
@@ -126,18 +100,9 @@
 			      	<% if product.genre == "定食" %>
 				        <td><%= product.title %></td>
 				        <td><%= product.price %>￥</td>
-				        <<td><%= link_to 'Show', shop_path(product), class: "btn btn-sm btn-outline-secondary" %></td>
-				        <td><% link_to 'Edit', edit_product_path(product) %></td>
-		    			<td><% link_to 'Destroy', product, method: :delete, class: "btn btn-sm btn-outline-danger" %></td>
-			        	
-				        
-				        <td>
-				        	<%= form_for @order_item, remote: true do |f| %>
-					        	<%= f.hidden_field :product_id, :value => product.id %>
-					        	<%= f.number_field :quantity, :value => 1, :min => 1 %>
-					        	<%= f.submit "Add to cart", class: "btn btn-sm btn-success" %>	<!-- Bam Add to cart mot phat la tao order_item moi -->
-				        	<% end %>
-				        </td>
+				        <td><%= link_to 'Show', shop_path(product), class: "btn btn-sm btn-outline-secondary" %></td>
+				        <td><%= link_to 'Edit', edit_product_path(product), class: "btn btn-sm btn-outline-warning" %></td>
+		    			<td><%= link_to 'Destroy', product, method: :delete, class: "btn btn-sm btn-outline-danger" %></td>
 				    <% end %>
 				</tr>
 				<% end %>
