--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,15 +14,15 @@
  *= require_self
  */
 
- .delete {
+/* .delete {
  	text-decoration: none;
  	color: red;
  	padding: 5px;
- 	border-radius: 30%;
+ 	border-radius: 7%;
  }
 
  .delete:hover {
  	background-color: crimson;
  	color: white;
  	transition: 0.2s;
- }
+ }*/
